[project]
name = "adventofcode2022"
version = "0.0.1"
description = "My Advent of Code 2022 solutions."
readme = "README.MD"
requires-python = "3.11.0"
keywords = ["advent of code", "python"]
authors = [
    {name = "Marvin Tensuan"},
    {email = "mdtensuan_dev@protonmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]


[tool.ruff]
line-length = 100
select = ["E", "F", "I001"]